<resources>
    <string name="app_name">iServe</string>

    <string name="configuration_cat_dat">Cài Đặt</string>
    <string name="configuration_cong_ket_noi">Cổng kết nối</string>
    <string name="configuration_may_chu">Máy chủ</string>
    <string name="configuration_thoi_gian_cho">Thời gian chờ</string>
    <string name="configuration_tiep_tuc">Tiếp tục</string>

    <string name="login_header">Đăng nhập</string>
    <string name="login_name">Name:</string>
    <string name="login_password">Password</string>
    <string name="login_ok">Đồng ý</string>
    <string name="login_cancel">Hủy</string>

    <string name="menu_thucdon">Thực đơn</string>
    <string name="menu_tonggiatien">Tổng giá tiền</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_configuration">iServe</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="table">Bàn</string>
    <string name="status_1">Bàn có khách</string>
    <string name="status_2">Bàn trống</string>
    <string name="status_3">Bàn có sk</string>
    <string name="status_4">Bàn đợi món</string>

    <string name="menu_thucdon_header">Thực đơn</string>
    <string name="menu_tong_gia_tien">Tổng giá tiền</string>
    <string name="menu_goi_mon">Gọi món</string>
    <string name="menu_goi_mon_tiep_tuc">Chưa có món nào được chọn</string>
    <string name="title_activity_menu_confirm">MenuConfirmActivity</string>
    <string name="title_activity_table_detail">iServe</string>

    <string name="title_1">Hóa đơn hiên tại</string>
    <string name="title_phucvu">Các món đã phục vụ</string>
    <string name="title_dangcho">Các món đang chờ</string>

    <string name="title_order">Gọi món</string>
    <string name="title_bill">Thanh toán</string>
    <string name="title_total">Tổng</string>
    <string name="title_vat">VAT</string>
    <string name="title_fee">Phí phục vụ</string>
    <string name="title_bill_total">Tổng hóa đơn</string>
    <string name="title_sokhach">Số khách</string>
    <string name="title_sl">Số lượng</string>
    <string name="btn_chon">Chọn</string>
    <string name="btn_huy">Hủy</string>
    <string name="btn_luu">Lưu</string>

    <string name="menu_confirm_goimon">Gọi món</string>
    <string name="menu_confirm_ban">Bàn</string>
    <string name="menu_confirm_xacnhan">Xác nhận</string>
    <string name="menu_confirm_xacnhangoidmon">Xác nhận gọi món</string>
    <string name="menu_confirm_tongiatien">Tổng giá tiền</string>

    <string name="table_confirm_xacnhanthaydoi">"Xác nhận thay đổi?</string>
    <string name="table_confirm_dung">Đúng</string>
    <string name="table_confirm_sai">Sai</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_abstract">AbstractActivity</string>

    <string name="logout">Đăng xuất</string>
    <string name="setting">Cài đặt</string>

</resources>
