<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.i.serve.iservesystem.ConfigurationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
         >

        <TextView
            android:textSize="15pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuration_cat_dat"
            android:gravity="center"
            android:layout_weight="0.5"
            android:id="@+id/lblConfigHeader" />

    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuration_may_chu"
            android:layout_weight="0.5"
            android:id="@+id/lblConfigMayChu" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="192.168.1.100"
            android:id="@+id/txtConfigMayChu" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuration_cong_ket_noi"
        android:layout_weight="0.5"
        android:id="@+id/lblConfigCongKetNoi" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="6789"
        android:id="@+id/txtConfigCongKetNoi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuration_thoi_gian_cho"
            android:layout_weight="0.5"
            android:id="@+id/lblConfigThoiGianCho" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="300"
            android:id="@+id/txtConfigThoiGianCho" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuration_tiep_tuc"
            android:layout_weight="0.5"
            android:id="@+id/btnConfigTiepTuc" />

    </LinearLayout>
</LinearLayout>
